<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.cice.appcomer.Main2Activity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="100"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:text="@string/comida_titulo"
        android:textAlignment="center"
        android:textSize="24sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_marginLeft="5dp"
            android:text="@string/comida_nombre"
            android:textSize="18sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="75"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_marginLeft="5dp"
            android:text="@string/comida_restaurante"
            android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="75"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_marginLeft="5dp"
            android:text="@string/comida_ubicacion"
            android:textSize="18sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="75"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_marginLeft="5dp"
            android:text="@string/comida_fecha"
            android:textSize="18sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="75"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="25"
            android:layout_marginLeft="5dp"
            android:text="@string/comida_hora"
            android:textSize="18sp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="75"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="18sp" />

   </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:columnCount="2">

        <Button
            android:id="@+id/buttonMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:onClick="guardar"
            android:text="@string/boton_maps" />

        <Button
            android:id="@+id/buttonGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:onClick="guardar"
            android:text="@string/boton_guardar" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="70dp"
            android:onClick="cancelar"
            android:text="@string/boton_cancelar" />

    </RelativeLayout>

</RelativeLayout>
